--- a/package.json
+++ b/package.json
@@ -31,31 +31,32 @@
   },
   "dependencies": {
     "@mendable/firecrawl-js": "^1.29.0",
+    "axios": "^1.10.0",
+    "chalk": "^5.3.0",
     "commander": "^12.0.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
+    "express": "^4.18.0",
+    "helmet": "^7.0.0",
     "lowdb": "^7.0.0",
+    "ora": "^8.0.0",
     "p-limit": "^5.0.0",
     "pdf-parse": "^1.1.1",
-    "express": "^4.18.0",
-    "cors": "^2.8.5",
-    "helmet": "^7.0.0",
-    "winston": "^3.11.0",
-    "chalk": "^5.3.0",
-    "ora": "^8.0.0"
+    "winston": "^3.11.0"
   },
   "devDependencies": {
-    "@types/node": "^20.0.0",
-    "@types/express": "^4.17.0",
     "@types/cors": "^2.8.0",
-    "@types/pdf-parse": "^1.1.0",
+    "@types/express": "^4.17.0",
     "@types/jest": "^29.5.0",
-    "@typescript-eslint/eslint-plugin": "^7.0.0",
-    "@typescript-eslint/parser": "^7.0.0",
+    "@types/node": "^20.0.0",
+    "@types/pdf-parse": "^1.1.0",
+    "@typescript-eslint/eslint-plugin": "^7.18.0",
+    "@typescript-eslint/parser": "^7.18.0",
     "eslint": "^8.57.0",
-    "prettier": "^3.2.0",
     "jest": "^29.7.0",
+    "prettier": "^3.2.0",
     "ts-jest": "^29.1.0",
     "tsx": "^4.7.0",
     "typescript": "^5.3.0"
   }
-} 
+}
