--- a/package.json
+++ b/package.json
@@ -31,17 +31,21 @@
   },
   "dependencies": {
     "@mendable/firecrawl-js": "^1.29.0",
+    "@types/jsdom": "^21.1.7",
     "axios": "^1.10.0",
     "chalk": "^5.3.0",
     "commander": "^12.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.18.0",
+    "fast-xml-parser": "^5.2.5",
     "helmet": "^7.0.0",
+    "jsdom": "^26.1.0",
     "lowdb": "^7.0.0",
     "ora": "^8.0.0",
     "p-limit": "^5.0.0",
     "pdf-parse": "^1.1.1",
+    "playwright": "^1.53.1",
     "winston": "^3.11.0"
   },
   "devDependencies": {
